Prevent inline code snippets from wrapping

--- a/src/global-styles/prism-theme.scss
+++ b/src/global-styles/prism-theme.scss
@@ -44,7 +44,7 @@ pre[class*='language-'] {
 :not(pre) > code[class*='language-'] {
   padding: 0.1em;
   border-radius: 0.3em;
-  white-space: normal;
+  white-space: nowrap;
 }
 
 .token.comment,
